fix: fixed test that was broken by changes in the code